force-app/main/default/objects/recTypesReg__c/recTypesReg__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Referenced by process builder and custom buttons to avoid hard-coding of record types</description>
    <label>Record Types - Registration</label>
</CustomObject>