force-app/main/default/objects/recTypesReg__c/fields/DD_Approval_in_Progress__c.field-meta.xml
<CustomField>
    <fullName>DD_Approval_in_Progress__c</fullName>
    <label>DD Approval in Progress</label>
    <length>18</length>
    <type>Text</type>
</CustomField>