force-app/main/default/objects/recTypesReg__c/fields/DD_Awaiting_Client__c.field-meta.xml
<CustomField>
    <fullName>DD_Awaiting_Client__c</fullName>
    <label>DD Awaiting Client</label>
    <length>18</length>
    <type>Text</type>
</CustomField>