force-app/main/default/objects/recTypesReg__c/fields/DD_Complete__c.field-meta.xml
<CustomField>
    <fullName>DD_Complete__c</fullName>
    <label>DD Complete</label>
    <length>18</length>
    <type>Text</type>
</CustomField>