force-app/main/default/objects/recTypesReg__c/fields/DD_Declined__c.field-meta.xml
<CustomField>
    <fullName>DD_Declined__c</fullName>
    <label>DD Declined</label>
    <length>18</length>
    <type>Text</type>
</CustomField>