force-app/main/default/objects/recTypesReg__c/fields/DD_In_Progress__c.field-meta.xml
<CustomField>
    <fullName>DD_In_Progress__c</fullName>
    <label>DD In Progress</label>
    <length>18</length>
    <type>Text</type>
</CustomField>