force-app/main/default/objects/recTypesReg__c/fields/DD_Needs_More_Time__c.field-meta.xml
<CustomField>
    <fullName>DD_Needs_More_Time__c</fullName>
    <label>DD Needs More Time</label>
    <length>18</length>
    <type>Text</type>
</CustomField>