force-app/main/default/objects/recTypesReg__c/fields/DD_New__c.field-meta.xml
<CustomField>
    <fullName>DD_New__c</fullName>
    <label>DD New</label>
    <length>18</length>
    <type>Text</type>
</CustomField>