force-app/main/default/objects/recTypesReg__c/fields/DD_Non_Responsive__c.field-meta.xml
<CustomField>
    <fullName>DD_Non_Responsive__c</fullName>
    <label>DD Non Responsive</label>
    <length>18</length>
    <type>Text</type>
</CustomField>