force-app/main/default/objects/recTypesReg__c/fields/DD_On_Hold__c.field-meta.xml
<CustomField>
    <fullName>DD_On_Hold__c</fullName>
    <label>DD On Hold</label>
    <length>18</length>
    <type>Text</type>
</CustomField>