force-app/main/default/objects/recTypesReg__c/fields/DD_Referred__c.field-meta.xml
<CustomField>
    <fullName>DD_Referred__c</fullName>
    <label>DD Referred</label>
    <length>18</length>
    <type>Text</type>
</CustomField>