force-app/main/default/objects/recTypesReg__c/fields/New_Registration__c.field-meta.xml
<CustomField>
    <fullName>New_Registration__c</fullName>
    <label>New Registration</label>
    <length>18</length>
    <type>Text</type>
</CustomField>