force-app/main/default/objects/recTypesReg__c/fields/Reg_Awaiting_Acceptance__c.field-meta.xml
<CustomField>
    <fullName>Reg_Awaiting_Acceptance__c</fullName>
    <label>Reg Awaiting Acceptance</label>
    <length>18</length>
    <type>Text</type>
</CustomField>