force-app/main/default/objects/recTypesReg__c/fields/Registration__c.field-meta.xml
<CustomField>
    <fullName>Registration__c</fullName>
    <label>Registration</label>
    <length>18</length>
    <type>Text</type>
</CustomField>